startbootstrap-clean-blog/k8s-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: react-blog
  labels:
    name: react-blog
