startbootstrap-clean-blog/k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-service
  namespace: react-blog
spec:
  selector:
    app: react-app
  ports:
    - protocol: TCP
      port: 80        # Service port (what clients connect to)
      targetPort: 3000 # Container port (where your app is running)
  type: LoadBalancer
